fix: remove unnecessary overflow properties from layout components

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -95,15 +95,14 @@
 	html {
 		width: 100vw;
 		height: 100%;
-		overflow-y: hidden;
 	}
 	body {
 		@apply bg-background text-foreground;
 		height: 100%;
 		margin: 0;
-		overflow-x: hidden;
 		direction: ltr;
 		font-size: 14px;
+		overflow-x: hidden;
 		font-family: 'Open Sans' sans-serif;
 	}
 
